Tue Sep 27 23:22:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (symbol, dsym, parser_set_number_literal): set state to
	  ENDARG, so that `do` after a literal should be `do_block` and
	  bound to the outer method.  [ruby-core:72482] [Bug #11873]

	* parse.y (parse_ident): revert r56198.

	* parse.y (warn_balanced): the state of symbol and numeric
	  literals is now EXPR_ENDARG, do not exclude it.

Tue Sep 27 22:59:42 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* NEWS: news about Warning.warning.

Tue Sep 27 18:10:18 2016  Jeremy Evans <code@jeremyevans.net>

	* error.c: This makes all warnings raised call Warning.warn, which
	  by default does the same thing it does currently
	  (rb_write_error_str).  You can override Warning.warn to change
	  the behavior. [ruby-core:75016] [Feature #12299]

Tue Sep 27 17:35:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseqw_s_compile_file): deal with syntax error as well as
	  compile, and should not abort when rescued.

Tue Sep 27 12:07:17 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/cgi/cookie.rb (parse): don't allow , as a separator. [Bug #12791]

	* lib/webrick/cookie.rb (parse): ditto.

Mon Sep 26 21:37:21 2016  Akinori MUSHA  <knu@iDaemons.org>

	* man/erb.1, man/irb.1, man/ri.1, man/ruby.1: Remove Ns before
	  punctuation.

Mon Sep 26 16:23:49 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/stringio/stringio.c (strio_seek): Avoid signed integer overflow.
	  It's not harmful in practice here, but is still undefined behavior.

	* ext/stringio/stringio.c (strio_extend): Check that the new length does
	  not exceed LONG_MAX. This fixes the invalid write on the overflow.

	* test/stringio/test_stringio.rb (test_write_integer_overflow): Add a
	  test case for the above fix in strio_extend().

Mon Sep 26 15:43:34 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* eval_intern.h (TH_PUSH_TAG): Initialize struct rb_vm_tag::tag with
	  Qundef rather than 0 which is equal to Qfalse. Since Kernel#throw(obj)